// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Display Divider 1`] = `
Array [
  <p
    className="wrapper variant--body1 color--initial display--initial align--inherit"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla. Donec molestie congue nulla sit amet viverra. Duis dignissim mi eget ex dignissim, id feugiat risus dapibus. Ut auctor imperdiet turpis, vel mollis dolor sollicitudin in. Quisque ut dui luctus, tincidunt mauris eu, congue quam. Quisque sodales, nisi sit amet sagittis consequat, dui purus tincidunt lorem, ac pulvinar lacus nunc at sapien. Ut quis erat convallis, pellentesque ligula sed, imperdiet tortor. Curabitur tempor felis et metus consequat, pellentesque hendrerit diam consequat. Praesent malesuada faucibus augue, ut vulputate est ullamcorper a. Curabitur metus orci, efficitur at congue ac, pretium eu nisl. In urna velit, ultrices ac ante eget, eleifend accumsan leo. Morbi gravida lobortis viverra. Sed porta nunc in imperdiet efficitur.
  </p>,
  <div
    className="wrapper align--center"
  >
    <hr />
    <p
      className="wrapper variant--label color--initial display--initial align--inherit"
    >
      Lorem ipsum dolor sit amet
    </p>
    <hr />
  </div>,
  <p
    className="wrapper variant--body1 color--initial display--initial align--inherit"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla. Donec molestie congue nulla sit amet viverra. Duis dignissim mi eget ex dignissim, id feugiat risus dapibus. Ut auctor imperdiet turpis, vel mollis dolor sollicitudin in. Quisque ut dui luctus, tincidunt mauris eu, congue quam. Quisque sodales, nisi sit amet sagittis consequat, dui purus tincidunt lorem, ac pulvinar lacus nunc at sapien. Ut quis erat convallis, pellentesque ligula sed, imperdiet tortor. Curabitur tempor felis et metus consequat, pellentesque hendrerit diam consequat. Praesent malesuada faucibus augue, ut vulputate est ullamcorper a. Curabitur metus orci, efficitur at congue ac, pretium eu nisl. In urna velit, ultrices ac ante eget, eleifend accumsan leo. Morbi gravida lobortis viverra. Sed porta nunc in imperdiet efficitur.
  </p>,
]
`;

exports[`Storyshots Components|Display Icon 1`] = `
<div>
  <span
    className="wrapper color--primary size--inherit"
  >
    <svg
      height="100%"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      ☐
    </svg>
  </span>
</div>
`;

exports[`Storyshots Components|Display Popup 1`] = `
Array [
  <span>
    <div
      className="wrapper color--primary position--bottom-left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div>
        <button
          className="wrapper variant--standard color--primary size--medium"
          data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
          data-flip-id="wrapper"
          data-portal-key="portal"
          type="button"
        >
          <div
            className="content"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="content"
            data-portal-key="portal"
          >
            <span
              className="buttonText"
            >
              <p
                className="wrapper variant--inherit color--initial display--initial align--inherit"
              >
                Hover over me!
              </p>
            </span>
          </div>
          <div
            className="loadingIndicator"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="loader"
            data-portal-key="portal"
          >
            <div
              className="variant--circular color--primary size--inherit"
            />
          </div>
        </button>
      </div>
      <div
        className="popup"
        data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
        data-flip-id="popup"
        data-portal-key="portal"
      >
        <p
          className="wrapper variant--inherit color--initial display--initial align--inherit"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla.
        </p>
      </div>
    </div>
  </span>,
  <div
    className="wrapper align--center"
  >
    <hr />
    <p
      className="wrapper variant--label color--initial display--initial align--inherit"
    >
      Examples
    </p>
    <hr />
  </div>,
  <span>
    <div
      className="wrapper color--primary position--right"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <div>
        <button
          className="wrapper variant--standard color--primary size--medium"
          data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
          data-flip-id="wrapper"
          data-portal-key="portal"
          type="button"
        >
          <div
            className="content"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="content"
            data-portal-key="portal"
          >
            <span
              className="buttonText"
            >
              <p
                className="wrapper variant--inherit color--initial display--initial align--inherit"
              >
                Right
              </p>
            </span>
          </div>
          <div
            className="loadingIndicator"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="loader"
            data-portal-key="portal"
          >
            <div
              className="variant--circular color--primary size--inherit"
            />
          </div>
        </button>
      </div>
      <div
        className="popup"
        data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
        data-flip-id="popup"
        data-portal-key="portal"
      >
        <p
          className="wrapper variant--inherit color--initial display--initial align--inherit"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla.
        </p>
      </div>
    </div>
  </span>,
  <span>
    <div
      className="wrapper color--primary position--left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <div>
        <button
          className="wrapper variant--standard color--primary size--medium"
          data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
          data-flip-id="wrapper"
          data-portal-key="portal"
          type="button"
        >
          <div
            className="content"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="content"
            data-portal-key="portal"
          >
            <span
              className="buttonText"
            >
              <p
                className="wrapper variant--inherit color--initial display--initial align--inherit"
              >
                Left
              </p>
            </span>
          </div>
          <div
            className="loadingIndicator"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="loader"
            data-portal-key="portal"
          >
            <div
              className="variant--circular color--primary size--inherit"
            />
          </div>
        </button>
      </div>
      <div
        className="popup"
        data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
        data-flip-id="popup"
        data-portal-key="portal"
      >
        <p
          className="wrapper variant--inherit color--initial display--initial align--inherit"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla.
        </p>
      </div>
    </div>
  </span>,
  <span>
    <div
      className="wrapper color--primary position--top-left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <div>
        <button
          className="wrapper variant--standard color--primary size--medium"
          data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
          data-flip-id="wrapper"
          data-portal-key="portal"
          type="button"
        >
          <div
            className="content"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="content"
            data-portal-key="portal"
          >
            <span
              className="buttonText"
            >
              <p
                className="wrapper variant--inherit color--initial display--initial align--inherit"
              >
                top-left
              </p>
            </span>
          </div>
          <div
            className="loadingIndicator"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="loader"
            data-portal-key="portal"
          >
            <div
              className="variant--circular color--primary size--inherit"
            />
          </div>
        </button>
      </div>
      <div
        className="popup"
        data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
        data-flip-id="popup"
        data-portal-key="portal"
      >
        <p
          className="wrapper variant--inherit color--initial display--initial align--inherit"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla.
        </p>
      </div>
    </div>
  </span>,
  <span>
    <div
      className="wrapper color--primary position--top-center"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <div>
        <button
          className="wrapper variant--standard color--primary size--medium"
          data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
          data-flip-id="wrapper"
          data-portal-key="portal"
          type="button"
        >
          <div
            className="content"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="content"
            data-portal-key="portal"
          >
            <span
              className="buttonText"
            >
              <p
                className="wrapper variant--inherit color--initial display--initial align--inherit"
              >
                top-center
              </p>
            </span>
          </div>
          <div
            className="loadingIndicator"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="loader"
            data-portal-key="portal"
          >
            <div
              className="variant--circular color--primary size--inherit"
            />
          </div>
        </button>
      </div>
      <div
        className="popup"
        data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
        data-flip-id="popup"
        data-portal-key="portal"
      >
        <p
          className="wrapper variant--inherit color--initial display--initial align--inherit"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla.
        </p>
      </div>
    </div>
  </span>,
  <span>
    <div
      className="wrapper color--primary position--top-right"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <div>
        <button
          className="wrapper variant--standard color--primary size--medium"
          data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
          data-flip-id="wrapper"
          data-portal-key="portal"
          type="button"
        >
          <div
            className="content"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="content"
            data-portal-key="portal"
          >
            <span
              className="buttonText"
            >
              <p
                className="wrapper variant--inherit color--initial display--initial align--inherit"
              >
                top-right
              </p>
            </span>
          </div>
          <div
            className="loadingIndicator"
            data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
            data-flip-id="loader"
            data-portal-key="portal"
          >
            <div
              className="variant--circular color--primary size--inherit"
            />
          </div>
        </button>
      </div>
      <div
        className="popup"
        data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
        data-flip-id="popup"
        data-portal-key="portal"
      >
        <p
          className="wrapper variant--inherit color--initial display--initial align--inherit"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla.
        </p>
      </div>
    </div>
  </span>,
]
`;

exports[`Storyshots Components|Display Type 1`] = `
Array [
  <h1
    className="wrapper variant--h1 color--initial display--initial align--inherit hasBottomMargin"
  >
    Lorem ipsum dolor sit amet.
  </h1>,
  <p
    className="wrapper variant--body1 color--initial display--initial align--inherit hasBottomMargin"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla. Donec molestie congue nulla sit amet viverra. Duis dignissim mi eget ex dignissim, id feugiat risus dapibus. Ut auctor imperdiet turpis, vel mollis dolor sollicitudin in. Quisque ut dui luctus, tincidunt mauris eu, congue quam. Quisque sodales, nisi sit amet sagittis consequat, dui purus tincidunt lorem, ac pulvinar lacus nunc at sapien. Ut quis erat convallis, pellentesque ligula sed, imperdiet tortor. Curabitur tempor felis et metus consequat, pellentesque hendrerit diam consequat. Praesent malesuada faucibus augue, ut vulputate est ullamcorper a. Curabitur metus orci, efficitur at congue ac, pretium eu nisl. In urna velit, ultrices ac ante eget, eleifend accumsan leo. Morbi gravida lobortis viverra. Sed porta nunc in imperdiet efficitur.
  </p>,
  <div
    className="wrapper align--center"
  >
    <hr />
    <p
      className="wrapper variant--label color--initial display--initial align--inherit"
    >
      Examples
    </p>
    <hr />
  </div>,
  <h1
    className="wrapper variant--h1 color--initial display--initial align--inherit hasBottomMargin shouldTruncate"
  >
    H1 - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </h1>,
  <h2
    className="wrapper variant--h2 color--initial display--initial align--inherit hasBottomMargin shouldTruncate"
  >
    H2 - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </h2>,
  <h3
    className="wrapper variant--h3 color--initial display--initial align--inherit hasBottomMargin shouldTruncate"
  >
    H3 - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </h3>,
  <p
    className="wrapper variant--body1 color--initial display--initial align--inherit hasBottomMargin shouldTruncate"
  >
    body1 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla. Donec molestie congue nulla sit amet viverra. Duis dignissim mi eget ex dignissim, id feugiat risus dapibus. Ut auctor imperdiet turpis, vel mollis dolor sollicitudin in.
  </p>,
  <p
    className="wrapper variant--body2 color--initial display--initial align--inherit hasBottomMargin shouldTruncate"
  >
    body1 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla. Donec molestie congue nulla sit amet viverra. Duis dignissim mi eget ex dignissim, id feugiat risus dapibus. Ut auctor imperdiet turpis, vel mollis dolor sollicitudin in.
  </p>,
  <p
    className="wrapper variant--label color--initial display--initial align--inherit hasBottomMargin shouldTruncate"
  >
    label - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu ante hendrerit, imperdiet lectus in, egestas nulla. Donec molestie congue nulla sit amet viverra. Duis dignissim mi eget ex dignissim, id feugiat risus dapibus. Ut auctor imperdiet turpis, vel mollis dolor sollicitudin in.
  </p>,
]
`;

exports[`Storyshots Components|Feedback Progress 1`] = `
<div
  className="variant--horizontal color--primary size--medium"
/>
`;

exports[`Storyshots Components|User Input Button 1`] = `
<div>
  <button
    className="wrapper variant--standard color--primary size--medium"
    data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
    data-flip-id="wrapper"
    data-portal-key="portal"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <div
      className="content"
      data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
      data-flip-id="content"
      data-portal-key="portal"
    >
      <span
        className="buttonText"
      >
        <p
          className="wrapper variant--inherit color--initial display--initial align--inherit"
        >
          Click me!
        </p>
      </span>
    </div>
    <div
      className="loadingIndicator"
      data-flip-config="{\\"translate\\":true,\\"scale\\":true,\\"opacity\\":true}"
      data-flip-id="loader"
      data-portal-key="portal"
    >
      <div
        className="variant--circular color--primary size--inherit"
      />
    </div>
  </button>
</div>
`;

exports[`Storyshots Other Components|Others Ripple 1`] = `
<div
  style={
    Object {
      "padding": "1em",
    }
  }
>
  <span
    className="wrapper color--primary"
  />
</div>
`;
